# MicGo

./: .gitignore  build.gradle  gradle.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/micgo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  native_jni.cpp
app/src/main/cpp/3dparty/ffmpeg-3.4.2/: build_a_android.sh  build_so_android.sh  config.h
app/src/main/cpp/3dparty/ffmpeg-3.4.2/android/armv7-a-vfp/lib/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc
app/src/main/cpp/3dparty/ffmpeg-3.4.2/doc/: config.texi
app/src/main/cpp/3dparty/ffmpeg-3.4.2/ffbuild/: config.fate  config.mak  config.sh
app/src/main/cpp/3dparty/ffmpeg-3.4.2/libavdevice/: libavdevice.pc
app/src/main/cpp/3dparty/ffmpeg-3.4.2/libavutil/: libavutil.pc  timer.h
app/src/main/cpp/3dparty/ffmpeg-3.4.2/libswresample/: libswresample.pc
app/src/main/cpp/3dparty/ffmpeg-3.4.2/libswscale/: libswscale.pc
app/src/main/cpp/extract/: CMakeLists.txt  ExtractProcessor.cpp
app/src/main/cpp/extract/libextract/: extractor.cpp  extractor.h
app/src/main/cpp/glstudio/: CMakeLists.txt  gl_controller.cpp
app/src/main/cpp/glstudio/common/: matrix.cpp  matrix.h
app/src/main/cpp/glstudio/demo/: CubeController.cpp  CubeController.h  cube_controller.cpp  cube_controller.h
app/src/main/cpp/glstudio/wave/: gl_wave_controller.cpp  wave_particular.cpp  wave_particular.h  wave_render.cpp  wave_render.h
app/src/main/cpp/libcommon/: common_tools.h  ffmpeg_common.h
app/src/main/cpp/nativelib/: common_tools.h  native_lib.cpp  thread_rename.cpp  thread_rename.h
app/src/main/cpp/video_concat/: CMakeLists.txt  VideoConcatProcessor.cpp
app/src/main/cpp/video_concat/libcube/: CubeController.cpp  CubeController.h
app/src/main/cpp/video_concat/libvideo_concat/: video_concator.cpp  video_concator.h
app/src/main/java/com/micgo/: MainActivity.java  MicGoApplication.java
app/src/main/java/com/micgo/demos/: CheckMetadataActivity.java  NIOActivity.java  OthersActivity.java  RBLActivity.java
app/src/main/java/com/micgo/demos/nio/: ExceptionWatcher.java  RecordingDetail.java
app/src/main/java/com/micgo/exoplayer/: ExoPlayerActivity.java  LinkSourceAvtivity.java  PlayListAvtivity.java  SniffActivity.java
app/src/main/java/com/micgo/exoplayer/sniff/: MetadataChecker.java  MetadataSniff.java
app/src/main/java/com/micgo/exoplayer/studio/: DefaultExtractorsFactory.java
app/src/main/java/com/micgo/ffmpeg/: AudioEncodeActivity.java  ExtractActivity.java  FFmpegActivity.java  PrimaryActivity.java  VideoConcatActivity.java
app/src/main/java/com/micgo/ffmpeg/primary/: AudioEncodeActivity.java  FFmpegPrimaryActivity.java
app/src/main/java/com/micgo/mediacodec/: AudioTrackPcmActivity.java  MediaCodecActivity.java  SimpleAudioActivity.java
app/src/main/java/com/micgo/opengl/: OpenGLActivity.java
app/src/main/java/com/micgo/opengl/cube/: GLCubeActivity.java
app/src/main/java/com/micgo/opengl/trans/: GLTansActivity.java  OpenGLTansActivity.java
app/src/main/java/com/micgo/opengl/trans/view/: GLRenderThread.java  GLRendererImpl.java  TransBgView.java
app/src/main/java/com/micgo/opengl/wave/: GLWaveActivity.java
app/src/main/java/com/micgo/others/: CheckMetadataActivity.java  NIOActivity.java  OthersActivity.java  RBLActivity.java  SerialReadActivity.java  SnowActivity.java  TextureViewActivity.java
app/src/main/java/com/micgo/others/nio/: ExceptionWatcher.java  RecordingDetail.java
app/src/main/java/com/micgo/others/snow/: QuaverFlake.java  RandomGenerator.java  SnowView.java
app/src/main/java/com/micgo/others/textview/: GLPictureView.java  GLRenderThread.java  GLRendererImpl.java  PictureView.java
app/src/main/java/com/micgo/studio/: NativeGo.java  NativeLib.java  thread_rename.cpp
app/src/main/java/com/micgo/studio/ffmpeg/: ExtractProcessor.java  VideoConcatProcessor.java
app/src/main/java/com/micgo/studio/gl/: GLESController.java
app/src/main/java/com/micgo/utils/: DownloadExceptionLogger.java  KTVLog.java  KTVUtility.java
app/src/main/res/layout/: activity_audio_encode.xml  activity_check_metadata.xml  activity_exoplayer.xml  activity_extract.xml  activity_ffmpeg.xml  activity_ffmpeg_primary.xml  activity_main.xml  activity_mediacodec.xml  activity_micgo_demo.xml  activity_nio.xml  activity_opengl.xml  activity_opengl_cube.xml  activity_opengl_trans.xml  activity_opengl_wave.xml  activity_others.xml  activity_playlist.xml  activity_rbl.xml  activity_serial_read.xml  activity_sniff.xml  activity_snow.xml  activity_texture.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/test/java/com/micgo/: ExampleUnitTest.java
exoplayer/: build.gradle  proguard-rules.pro
exoplayer/src/main/java/com/google/android/exoplayer2/: ExoPlayerImplInternal.java
exoplayer/src/main/java/com/google/android/exoplayer2/extractor/: DefaultExtractorsFactory.java
exoplayer/src/main/java/com/google/android/exoplayer2/mediacodec/: MediaCodecRenderer.java
exoplayer/src/main/java/com/google/android/exoplayer2/upstream/cache/: CacheDataSource.java  SimpleCache.java
exoplayer/src/main/res/drawable/: wave_activity_bg.xml
exoplayer/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
